fix: avoid that the close button will be hidden if the message is too long

--- a/src/app/providers/messages/messages.scss
+++ b/src/app/providers/messages/messages.scss
@@ -11,6 +11,10 @@ $toast-info:    color($colors, info);
   }
 }
 
+.toast-message {
+    max-width: 80%;
+}
+
 .toast-success {
   @extend .toast;
   .toast-wrapper {
